# clever-inspect

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  cred.example.json  docker-entrypoint.sh  docker-healthcheck.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
app/: main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py
app/api/v1/routers/: health.py  inspect.py
app/core/: config.py  logging.py
app/db/: __init__.py  _typings.py  db.py
app/hooks/: __init__.py  db.py  game_data.py  logging.py  pool.py
app/migrations/: env.py
app/models/: item.py
app/schemas/: __init__.py  case.py  health.py  item.py  sticker.py
app/services/: __init__.py
app/services/game_data/: __init__.py  game_data.py  models.py
app/services/pool/: __init__.py  monkey_patch.py  pool.py
docker-public/: docker-compose.yml  nginx.conf
scripts/: healthcheck.py
tests/: conftest.py  data.py  mocks.py  test_app.py  test_game_data.py
